# neopo

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  derp.json  docker-install.sh  install.py  install.sh  main.py  neopo  pyproject.toml  setup.py  travis.sh  travisTests  windows.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-pip.yml  python.yml
aur/: .gitignore  PKGBUILD  neopo-git.install
ci/: github-neopo.py  github.sh  install-neopo.sh  test-neopo.py  travis.sh  travisTests
completion/: generate.py  neopo
derp/: README.md  project.properties
derp/src/: derp.cpp  derp.ino
docs/: README.md  full-docs.md  quick-docs.md  windows.md
docs/tutorials/: README.md  install.md  travisci.md
man/: make-html  makefile  neopo.1  neopo.html
neopo/: .gitignore  .pylintrc  Makefile  __init__.py  __main__.py  build.py  cli.py  command.py  common.py  completion.py  help_info.py  install.py  iterate.py  manifest.py  neopo.py  particle.py  project.py  script.py  serial.py  structure.md  test.script  toolchain.py  utility.py  version.py  workbench.py
scripts/: POSTINSTALL  particle
scripts/unix/: neopo  neopo-script  particle
scripts/windows/: neopo-script.cmd  neopo.cmd  particle.cmd
serial/: baud-switcher.c  makefile
test/: README.md
test/neopo/: README.md  project.properties
test/neopo/src/: neopo.ino
test/src/: test.cpp  test.ino
tests/: github-neopo.py  travis-neopo.py  travis.sh  travisTests
